--- a/Blogwasm/wwwroot/index.html
+++ b/Blogwasm/wwwroot/index.html
@@ -11,6 +11,8 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Blogwasm.styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.css">
 </head>
 
 <body>
@@ -27,7 +29,19 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    
+    <script>
+        window.highlightSnippet = function()
+        {
+            document.querySelectorAll('pre code').forEach((el) => 
+            {
+                hljs.highlightElement(el);
+            });
+        }
+    </script>
     <script src="_framework/blazor.webassembly.js"></script>
+
 </body>
 
 </html>
